--- a/links.html
+++ b/links.html
@@ -175,7 +175,7 @@
 
 					<div class="links-page-list">
 
-						<a href="https://lichnyj-brend.ru/start" class="links-page-btn " style="
+						<a href="https://lichnyj-brend.ru/start" class="links-page-btn shake " style="
 " 
 						target="_blank"
 >
@@ -193,7 +193,6 @@
 "
 							class="links-page-soc__link" title="Instagram"><i class="fa fa-instagram" aria-hidden="true"></i></a>
 					</div>
-					<div class="links-page-footer">@lichnyjbrend рекомендует SHORTWAYTOPAY</div>
 				</div>
 			</div>	
 		</div>			
