--- a/thanks.html
+++ b/thanks.html
@@ -85,9 +85,9 @@
             <div class="col-lg-6 col-md-6">
               <h1>СПАСИБО ЗА ВАШ ИНТЕРЕС</h1>
               <h5>Ваш сайт личного бренда будет готов очень скоро.</h5>
-              <p>Подпишитесь на наш Истаграм, чтобы подтвердить свой аккаунт</p>
+              <p>Мы отправим вам в Instagram Direct ссылку для подключения. Пожалуйста, подпишитесь на наш Instagram, чтобы вы увидели сообщение вовремя.</p>
 			  <br><br><br>
-              <p class="buttond"  style="text-align:center;"><a href="https://www.instagram.com/lichnyjbrend/" target="_blank" style="cursor: pointer; font-size:17px;  text-decoration: none; padding:13px 20px; color:#ffffff; background-color:#46c732; border-radius:8px; border: 3px solid #;">ПОДПИСАТЬСЯ ДЛЯ ПОДТВЕРЖДЕНИЯ</a></p>
+              <p class="buttond"  style="text-align:center;"><a href="https://www.instagram.com/lichnyjbrend/" target="_blank" style="cursor: pointer; font-size:17px;  text-decoration: none; padding:13px 20px; color:#ffffff; background-color:#46c732; border-radius:8px; border: 3px solid #;">ПОДПИСАТЬСЯ ДЛЯ ПОДКЛЮЧЕНИЯ</a></p>
 
             </div>
             <div class="col-lg-6 col-md-6"><img src="img/flyer.png" /></div>
