--- a/start.html
+++ b/start.html
@@ -90,7 +90,7 @@
               <form class="form-row" action="https://admapi.itsinsta.site/api/profiles" method="post">
                 <input id="ref" type="hidden" name="ref" value="" />
                 <span class="col-lg-7 col-md-6 col-sm-8 col-12"><input class="form-control" name="userName" placeholder="Введите Instagram"></span>
-                <span class="col-lg-4 col-md-6 col-sm-4 col-12"><input class="btn btn-success" type="submit" value="Оценить"></span>
+                <span class="col-lg-4 col-md-6 col-sm-4 col-12"><input class="btn btn-success" type="submit" value="Попробовать"></span>
               </form>
               <p id="error" style="color:red;"></p>
               <h6>Попробуй бесплатно&nbsp;&bullet; Дальше&nbsp;действовать&nbsp;будет&nbsp;бренд<h6>
