--- a/start.html
+++ b/start.html
@@ -125,7 +125,7 @@
 
       <section class="screens">
         <h2 class="display-4 text-center mb-5">Тебе понравится</h2>
-        <h4 class="text-secondary mx-auto mb-5">Личный бренд платформа - это инструмент для автоматического продвижения личного бренда, благодаря контенту из вашего Инстаграм.</h4><!--
+        <h4 class="text-secondary mx-auto mb-5">Личный бренд платформа - это инструмент для автоматического продвижения личного бренда, благодаря контенту из вашего Instagram. А ещё вы получаете страницу для ссылок в bio Instagram: красиво, удобно и БЕСПЛАТНО!</h4><!--
         --><div class="mb-3"><img src="img/podcast.jpg" /><p>Блогерам</p></div><!--
         --><div class="mb-3"><img src="img/youtube.jpg" /><p>Преподавателям</p></div><!--
         --><div class="mb-3"><img src="img/app.jpg" /><p>Мастерам</p></div><!--
