--- a/mlm/mosbig.ru.html
+++ b/mlm/mosbig.ru.html
@@ -93,14 +93,15 @@
 							<p><br/></p>
 
 							<p>
-								Статус MLM: <b>Не достигнут</b>
+								Статус MLM: <b>Куратор</b>
 							</p>
 							<p>
-								Подключено: <b>2 / 6</b><br/>
+								Подключено: <b>9</b><br/>
 							</p>
 							<p>
-								Вознаграждение: <b>1920 RUB</b>
-								<br/>&nbsp;&nbsp;- получено от продаж: <b>1920 RUB</b>
+								Вознаграждение: <b>8640 RUB</b>
+								<br/>&nbsp;&nbsp;- получено от продаж: <b>8640 RUB</b>
+								<br/>&nbsp;&nbsp;- от сети: <b>0 RUB</b>
 							</p>
 							<p>
 								<a href="https://mosbig.ru" target="_blank"><b>Сайт</b></a>
@@ -132,6 +133,90 @@
 						<a href="ekaterina_martovskaya.html" class="items-item__wrap">
 							<div class="items-item__pic">
 								<img src="https://scontent-arn2-2.cdninstagram.com/vp/a1d99fe4ef64759ff9ae58f2ce615c07/5E6C2AAE/t51.2885-19/s150x150/73176910_782390448878220_5708649918848040960_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Мартовская Екатерина">
+							</div>							
+							<div class="items-item__blind">
+								<div class="items-item__blind-wrap">
+									<div><span><i class="fa" aria-hidden="true"></i>0 RUB</span> <span><i class="fa" aria-hidden="true"></i></span><span><i class="fa fa-external-link" aria-hidden="true"></i>Открыть</span></div>
+								</div>
+							</div>
+						</a>
+					</div>
+					<div class="items-item">
+						<a href="avtormirov.html" class="items-item__wrap">
+							<div class="items-item__pic">
+								<img src="https://scontent-arn2-2.cdninstagram.com/vp/07916f2c813a836b0ca2695ebe87105a/5E8AE2F3/t51.2885-19/s150x150/70705268_415949419102242_4971514903857725440_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Emelianov Filipp">
+							</div>							
+							<div class="items-item__blind">
+								<div class="items-item__blind-wrap">
+									<div><span><i class="fa" aria-hidden="true"></i>0 RUB</span> <span><i class="fa" aria-hidden="true"></i></span><span><i class="fa fa-external-link" aria-hidden="true"></i>Открыть</span></div>
+								</div>
+							</div>
+						</a>
+					</div>
+					<div class="items-item">
+						<a href="vasilevvladimir6217.html" class="items-item__wrap">
+							<div class="items-item__pic">
+								<img src="https://scontent-arn2-2.cdninstagram.com/vp/0353e67342663314fcdbe10ff27dffa7/5E87FCE3/t51.2885-19/s150x150/19122092_1683327718628695_4498263748980506624_a.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Васильев Владимир">
+							</div>							
+							<div class="items-item__blind">
+								<div class="items-item__blind-wrap">
+									<div><span><i class="fa" aria-hidden="true"></i>0 RUB</span> <span><i class="fa" aria-hidden="true"></i></span><span><i class="fa fa-external-link" aria-hidden="true"></i>Открыть</span></div>
+								</div>
+							</div>
+						</a>
+					</div>
+					<div class="items-item">
+						<a href="mirbezgranitssactress.html" class="items-item__wrap">
+							<div class="items-item__pic">
+								<img src="https://scontent-arn2-2.cdninstagram.com/vp/d6dbf39513bcce627474feafc9e7baa9/5E8A0917/t51.2885-19/s150x150/21041010_327854797684748_4842671687478542336_a.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Ораторское искусство">
+							</div>							
+							<div class="items-item__blind">
+								<div class="items-item__blind-wrap">
+									<div><span><i class="fa" aria-hidden="true"></i>0 RUB</span> <span><i class="fa" aria-hidden="true"></i></span><span><i class="fa fa-external-link" aria-hidden="true"></i>Открыть</span></div>
+								</div>
+							</div>
+						</a>
+					</div>
+					<div class="items-item">
+						<a href="voronkova_life.html" class="items-item__wrap">
+							<div class="items-item__pic">
+								<img src="https://scontent-arn2-2.cdninstagram.com/vp/d46425cce64e6fd7c6ea4e6a2dc4680a/5E891A98/t51.2885-19/s150x150/72365509_2485436855067708_3803857641336209408_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
+							</div>							
+							<div class="items-item__blind">
+								<div class="items-item__blind-wrap">
+									<div><span><i class="fa" aria-hidden="true"></i>0 RUB</span> <span><i class="fa" aria-hidden="true"></i></span><span><i class="fa fa-external-link" aria-hidden="true"></i>Открыть</span></div>
+								</div>
+							</div>
+						</a>
+					</div>
+					<div class="items-item">
+						<a href="il_emelyanov.html" class="items-item__wrap">
+							<div class="items-item__pic">
+								<img src="https://scontent-arn2-2.cdninstagram.com/vp/953a6594d383dc5babef5bdab66b2db8/5E78A4C4/t51.2885-19/s150x150/53568794_433968904014236_8279191517701079040_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Илья Емельянов">
+							</div>							
+							<div class="items-item__blind">
+								<div class="items-item__blind-wrap">
+									<div><span><i class="fa" aria-hidden="true"></i>0 RUB</span> <span><i class="fa" aria-hidden="true"></i></span><span><i class="fa fa-external-link" aria-hidden="true"></i>Открыть</span></div>
+								</div>
+							</div>
+						</a>
+					</div>
+					<div class="items-item">
+						<a href="valery21gal.html" class="items-item__wrap">
+							<div class="items-item__pic">
+								<img src="https://scontent-arn2-2.cdninstagram.com/vp/5f4d83aeed54e3d33ebf005ac5b1dbcf/5E7A60F2/t51.2885-19/s150x150/11379943_615869935183397_411290850_a.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Гальетов Валерий">
+							</div>							
+							<div class="items-item__blind">
+								<div class="items-item__blind-wrap">
+									<div><span><i class="fa" aria-hidden="true"></i>0 RUB</span> <span><i class="fa" aria-hidden="true"></i></span><span><i class="fa fa-external-link" aria-hidden="true"></i>Открыть</span></div>
+								</div>
+							</div>
+						</a>
+					</div>
+					<div class="items-item">
+						<a href="alina_kuzyukova.html" class="items-item__wrap">
+							<div class="items-item__pic">
+								<img src="https://scontent-arn2-2.cdninstagram.com/vp/f63f4ba631ea2cd9cb41edf00b5cc7ff/5E88794A/t51.2885-19/s150x150/69778407_403505280365046_498859893084651520_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Оптовый интернет-магазин">
 							</div>							
 							<div class="items-item__blind">
 								<div class="items-item__blind-wrap">
