--- a/start.html
+++ b/start.html
@@ -329,7 +329,7 @@ $(document).ready(function(){
     	$('html, body').animate({ scrollTop: 0}, 250); 
     });
 
-    if (ref) {
+    if (false) {
         $.get("https://admapi.itsinsta.site/api/profiles/" + ref, 
             function(data) { 
                 $('#refLink').attr("href", data.siteUrl);
