--- a/links.html
+++ b/links.html
@@ -200,8 +200,9 @@
 >
 
 							<strong>
-								Узнать подробнее
+								СТАРТ
 							</strong>
+							<small>Бесплатно отправить в Google свой Инстаграм</small>
 						</a>
 
 
