--- a/mlm/arhitektura_zhizni.html
+++ b/mlm/arhitektura_zhizni.html
@@ -9,8 +9,8 @@
     <script async src="https://use.fontawesome.com/d758daec41.js"></script>   
 	<link rel="stylesheet" href="../css/style.css"/>
     
-    <meta name="description" content="🔹Управляла крупными бизнесами
-🔹Автор проекта «Архитектура - Жизни»
+    <meta name="description" content="🔹Пишу книгу «Архитектура Жизни»
+🔹Автор пр-та ,Архитектура-Жизни’
 🔹Помогаю раскопать ваши деньги
 🔹Обучение мирового уровня
 ⬇️Стань частью большего⬇">
@@ -43,8 +43,8 @@
     <meta property="og:image:width" content="150"/>
     <meta property="og:image:height" content="150"/>
     <meta property="og:title" content="MLM Архитектура Жизни|Юлия Светлая" />
-    <meta property="og:description" content="🔹Управляла крупными бизнесами
-🔹Автор проекта «Архитектура - Жизни»
+    <meta property="og:description" content="🔹Пишу книгу «Архитектура Жизни»
+🔹Автор пр-та ,Архитектура-Жизни’
 🔹Помогаю раскопать ваши деньги
 🔹Обучение мирового уровня
 ⬇️Стань частью большего⬇" />
