--- a/links.html
+++ b/links.html
@@ -202,7 +202,7 @@
 							<strong>
 								СТАРТ
 							</strong>
-							<small>Бесплатно отправить в Google свой Инстаграм</small>
+							<small>Отправь Бесплатно в Google свой Инстаграм</small>
 						</a>
 
 
