--- a/error.html
+++ b/error.html
@@ -120,7 +120,7 @@
 								<div class="article-more__item-pic-blind">
 									<span><i class="fa fa-comment-o" aria-hidden="true"></i>4</span> <span><i class="fa fa-heart" aria-hidden="true"></i>59</span>
 								</div>
-								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/75332692_148780853067814_8895429740657023259_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=110&oh=8a32dc22b92a0983f958690f27039875&oe=5DE56519" alt="Пример сайта личного">
+								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/75332692_148780853067814_8895429740657023259_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=110&oh=c0e3ca18cbabc1dc8db779ad6621eb14&oe=5DE6B699" alt="Пример сайта личного">
 							</div>
 							<div class="article-more__item-name">Пример сайта личного</div>
 						</a>
@@ -147,7 +147,7 @@
 								<div class="article-more__item-pic-blind">
 									<span><i class="fa fa-comment-o" aria-hidden="true"></i>2</span> <span><i class="fa fa-heart" aria-hidden="true"></i>52</span>
 								</div>
-								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/73420179_1596390203831375_558253408051764897_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&oh=d5ea0ba9a779db9ac682445944378744&oe=5DE55955" alt="Как повысить охват в Инстаграм?">
+								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/73420179_1596390203831375_558253408051764897_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&oh=0ca36601cfbf992e22b09d9fb545868e&oe=5DE6AAD5" alt="Как повысить охват в Инстаграм?">
 							</div>
 							<div class="article-more__item-name">Как повысить охват в Инстаграм?</div>
 						</a>
@@ -156,7 +156,7 @@
 								<div class="article-more__item-pic-blind">
 									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>52</span>
 								</div>
-								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/71953514_503294760256382_2467697232353085504_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=102&oh=f12d5eeaa24fa7de01cf843fb1e27a4d&oe=5DE5529B" alt="Конструктор меню Сторис для сайта">
+								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/71953514_503294760256382_2467697232353085504_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=102&oh=f188a49736e2c8c95ffde49ef4a5f37a&oe=5DE6A41B" alt="Конструктор меню Сторис для сайта">
 							</div>
 							<div class="article-more__item-name">Конструктор меню Сторис для сайта</div>
 						</a>
@@ -165,9 +165,18 @@
 								<div class="article-more__item-pic-blind">
 									<span><i class="fa fa-comment-o" aria-hidden="true"></i>1</span> <span><i class="fa fa-heart" aria-hidden="true"></i>50</span>
 								</div>
-								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/73328780_197654854598517_4362983194626599587_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=109&oh=22763c925f34ec4369beda13fa705123&oe=5DE55A24" alt="ЗВЕЗДНАЯ МАГИЯ ИНСТА">
+								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/73328780_197654854598517_4362983194626599587_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=109&oh=1ec070a6503f5771808dcacd80c99174&oe=5DE6ABA4" alt="ЗВЕЗДНАЯ МАГИЯ ИНСТА">
 							</div>
 							<div class="article-more__item-name">ЗВЕЗДНАЯ МАГИЯ ИНСТА</div>
+						</a>
+							<a href="./posts/./kak-v-poisk-popadaet-instagram.html" class="article-more__item">
+							<div class="article-more__item-pic">
+								<div class="article-more__item-pic-blind">
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>3</span> <span><i class="fa fa-heart" aria-hidden="true"></i>46</span>
+								</div>
+								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/71183716_2170389369931426_6470813789608123929_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=110&oh=3a8c05953f6240597aee3fae4c57bed4&oe=5DE79497" alt="Как в поиск попадает инстаграм.">
+							</div>
+							<div class="article-more__item-name">Как в поиск попадает инстаграм.</div>
 						</a>
 							<a href="./posts/./konstruktor-storis-menyu.html" class="article-more__item">
 							<div class="article-more__item-pic">
@@ -177,15 +186,6 @@
 								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/70702003_3008154079212519_7978712416170394093_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=103&oh=d5abeec90b8ebf9c0b072f780134bf2e&oe=5E7AF9D2" alt="Конструктор Сторис Меню.">
 							</div>
 							<div class="article-more__item-name">Конструктор Сторис Меню.</div>
-						</a>
-							<a href="./posts/./arkhitektor-instagram-portalov.html" class="article-more__item">
-							<div class="article-more__item-pic">
-								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>5</span> <span><i class="fa fa-heart" aria-hidden="true"></i>42</span>
-								</div>
-								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/73495511_254919438780266_6531679455434772858_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=102&oh=2995286d72500b56c8d35aabf6e12858&oe=5DE62727" alt="Архитектор инстаграм порталов!">
-							</div>
-							<div class="article-more__item-name">Архитектор инстаграм порталов!</div>
 						</a>
 						</div>
 				</div>
