--- a/mlm/mosbig.ru.html
+++ b/mlm/mosbig.ru.html
@@ -240,7 +240,7 @@
 					<div class="items-item">
 						<a href="ms.svetagerman.html" class="items-item__wrap">
 							<div class="items-item__pic">
-								<img src="https://scontent-arn2-2.cdninstagram.com/vp/8f0ebda5dfca132e9d8eaa9f1b9f557a/5E8956B4/t51.2885-19/s150x150/67433018_702333816937924_2084244098562129920_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Бренд - пр⭕дюсер Света Герман">
+								<img src="https://scontent-arn2-2.cdninstagram.com/vp/8f0ebda5dfca132e9d8eaa9f1b9f557a/5E8956B4/t51.2885-19/s150x150/67433018_702333816937924_2084244098562129920_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="БРЕНД - ПР⭕ДЮСЕР СВЕТА ГЕРМАН">
 							</div>							
 							<div class="items-item__blind">
 								<div class="items-item__blind-wrap">
