Details on start

--- a/main.html
+++ b/main.html
@@ -95,7 +95,7 @@
 							<h1>ЛИЧНЫЙ БРЕНД | ПЛАТФОРМА</h1>
 							<p>СДЕЛАЙ СЕБЕ ИМЯ!<br/>Новая онлайн платформа для самостоятельного продвижения ЛИЧНОГО БРЕНДА в Google и Яндекс, благодаря вашему контенту в Инстаграм.<br/>👇</p>
 							<p>
-								<a href="./links.html"><b>Актуальное</b></a>
+								<a href="./start.html"><b>ПОДРОБНЕЕ</b></a>
 							</p>
 						</div>
 					</div>
