--- a/thanks2.html
+++ b/thanks2.html
@@ -87,7 +87,7 @@
               <h5>Вы только что начали самостоятельное продвижение ЛИЧНОГО БРЕНДА</h5>
               <p>Публикация вашего сайта завершится через <span id="counter">120</span> секунд, и вы получите ссылку. А пока посмотрите короткую презентацию сервиса: </p>
 			  <br>
-	      <span class="col-lg-8 col-md-6 col-sm-8 col-12"><iframe width="350" height="186" src="https://www.youtube.com/embed/V3epfqhBy3I" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></span>
+	      <span class="col-lg-8 col-md-6 col-sm-8 col-12"><iframe width="350" height="450" src="https://www.youtube.com/embed/VRRcOiDpq8g" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></iframe></span>
 			  <br><br>
               <span class="col-lg-8 col-md-6 col-sm-8 col-12"><input disabled class="btn btn-success" type="submit" value="ПОСМОТРЕТЬ СВОЙ НОВЫЙ САЙТ"></span>
               <br><br>
