--- a/start1.html
+++ b/start1.html
@@ -146,7 +146,7 @@
         --><div class="mb-3"><a href="https://lichnyj-brend.ru/settings?theme=pink"><img src="img/themes/pink.png" /><p>Выбери: тема 1</p></a></div><!--
         --><div class="mb-3"><a href="https://lichnyj-brend.ru/settings?theme=marine"><img src="img/themes/marine.png" /><p>Выбери: тема 2</p></a></div><!--
         --><div class="mb-3"><a href="https://lichnyj-brend.ru/settings?theme=gold"><img src="img/themes/gold.png" /><p>Выбери: тема 3</p></a></div><!--
-        --><div class="mb-3"><a href="https://lichnyj-brend.ru/settings?theme=blue"><img src="img/themes/blue.png" style="margin-bottom: -0em;" /><p>Выбери: тема 4</p></a></div><!--
+        --><div class="mb-3"><a href="https://lichnyj-brend.ru/settings?theme=violet"><img src="img/themes/violet.png" style="margin-bottom: -0em;" /><p>Выбери: тема 4</p></a></div><!--
         --><div class="mb-3"><a href="https://lichnyj-brend.ru/settings?theme=orange"><img src="img/themes/orange.png" /><p>Выбери: тема 5</p></a></div><!--
         --><div class="mb-3"><a href="https://lichnyj-brend.ru/settings?theme=black"><img src="img/themes/black.png" /><p>Выбери: тема 6</p></a></div><!--
         --><div class="mb-3"><a href="https://lichnyj-brend.ru/settings?theme=red"><img src="img/themes/red.png" /><p>Выбери: тема 7</p></a></div><!--
